syntax = "proto3";

package proto3;

import "google/protobuf/timestamp.proto";

option java_package = "ryanberti";

message ExampleMessage {
  google.protobuf.Timestamp timestamp = 1;
  string session_id = 2;
  string message_name = 3;
  string message_value = 4;
}